--- a/毛泽东选集(1-7卷静火版)(一卷本).md
+++ b/毛泽东选集(1-7卷静火版)(一卷本).md
@@ -4,6 +4,38 @@
 
 ## 第一卷
 
+### 第二版出版说明
+
+《毛泽东选集》第一至四卷，在五十年代初和六十年代初先后出版，距今已有三四十年。现在，根据中共中央的决定，对《毛泽东选集》第一至四卷进行修订，在中国共产党建立七十周年之际出版第二版。
+
+《毛泽东选集》第一至四卷，是毛泽东同志亲自主持编辑的。第二版仍保持原有的篇目，只增加《反对本本主义》一篇。这篇著作，曾一度散失，六十年代初才重新得到，后经毛泽东同志审定，在一九六四年出版的《毛泽东著作选读》中第一次公开发表。
+
+这次修订，对有些文章误署的写作时间或发表时间，对正文中的某些史实以及少量错字、漏字等，作了校正。对某些用字，包括少数生僻难认的地名用字，根据文字规范化的要求，作了更改。对有些题解，作了少量史实和提法方面的修正；同时，新写了几篇题解。对正文所作的校订，分别列表附在各卷书末。
+
+《毛泽东选集》第一至四卷的修订工作，主要是校订注释，改正注释中某些错讹的史实和不准确的提法，增补一些新的注释，删去少量的注释。注释校订工作是根据毛泽东同志的意见，从一九六二年起着手进行的，后因“文化大革命”而中断。这次校订，在六十年代工作的基础上，吸收了近二三十年来史料收集和学术研究的成果，对注释又作了进一步的修改和增补。
+
+<div style="text-align: right;">中共中央文献编辑委员会</div>
+
+<div style="text-align: right;">一九九一年二月</div>
+
+### 本书出版的说明
+
+这部选集，包括了毛泽东同志在中国革命各个时期中的重要著作。几年前各地方曾经出过几种不同版本的《毛泽东选集》，都是没有经过著者审查的，体例颇为杂乱，文字亦有错讹，有些重要的著作又没有收进去。现在的这部选集，是按照中国共产党成立后所经历的各个历史时期并且按照著作年月次序而编辑的。这部选集尽可能地搜集了一些为各地方过去印行的集子还没有包括在内的重要著作。选集中的各篇著作，都经著者校阅过，其中有些地方著者曾作了一些文字上的修正，也有个别的文章曾作了一些内容上的补充和修改。
+
+下面有几点属于出版事务的声明：
+
+第一，现在出版的这个选集，还是不很完备的。由于国民党反动派对于革命文献的毁灭，由于在长期战争中革命文献的散失，我们现在还不能够找到毛泽东同志的全部著作，特别是毛泽东同志所写的许多书信和电报（这些在毛泽东同志著作中占很大的部分）。
+
+第二，有些曾经流行的著作，例如《农村调查》，遵照著者的意见，没有编入；又如《经济问题与财政问题》，也遵照著者的意见，只编进了其中的第一章（即《关于过去工作的基本总结》）。
+
+第三，选集中作了一些注释。其中一部分是属于题解的，附在各篇第一页的下面；其他部分，有属于政治性质的，有属于技术性质的，都附在文章的末尾。
+
+第四，本选集有两种装订的本子。一种是各时期的著作合订的一卷本，另一种是四卷本。四卷本的第一卷包括第一次国内革命战争时期和第二次国内革命战争时期的著作；第二卷和第三卷包括抗日战争时期的著作；第四卷包括第三次国内革命战争时期的著作。
+
+<div style="text-align: right;">中共中央毛泽东选集出版委员会</div>
+
+<div style="text-align: right;">一九五一年八月二十五日</div>
+
 ### 第一次国内革命战争时期(1924.1-1927.7)
 
 #### 中国社会各阶级的分析(1925.12.1)
