--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -4,6 +4,14 @@
 
 ## 第一卷
 
+### 第二版出版说明
+
+[第二版出版说明](毛泽东选集(1-7卷静火版)/第一卷/第二版出版说明.md)
+
+### 本书出版的说明
+
+[本书出版的说明](毛泽东选集(1-7卷静火版)/第一卷/本书出版的说明.md)
+
 ### 第一次国内革命战争时期(1924.1-1927.7)
 
 #### 中国社会各阶级的分析(1925.12.1)
