--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -434,3 +434,18 @@
 #### 关于蒋介石声明的声明(1936.12.28)
 
 爱国有罪，冤狱遍于国中；卖国有赏，汉奸弹冠相庆。
+
+#### 中国共产党在抗日时期的任务(1937.5.3)
+
+中国很久以来就是处在两种剧烈的基本的矛盾中——帝国主义和中国之间的矛盾，封建制度和人民大众之间的矛盾。
+
+这就是说，中国不但应当和中国人民的始终一贯的良友苏联相联合，而且应当按照可能，和那些在现时愿意保持和平而反对新的侵略战争的帝国主义国家建立共同反对日本帝国主义的关系。我们的统一战线应当以抗日为目的，不是同时反对一切帝国主义。
+
+我们的统一战线是包括资产阶级及一切同意保卫祖国的人们的，是举国一致对外的。
+
+中日民族矛盾的发展，在政治比重上，降低了国内阶级间的矛盾和政治集团间的矛盾的地位，使它们变为次要和服从的东西。但是国内阶级间的矛盾和政治集团间的矛盾本身依然存在着，并没有减少或消灭。
+
+中国共产党有自己的政治经济纲领。其最高的纲领是社会主义和共产主义，这是和三民主义有区别的。其在民主革命时期的纲领，亦比国内任何党派为彻底。但是共产党的民主革命纲领，与国民党第一次全国代表大会所宣布的三民主义的纲领，基本上是不相冲突的。因此，我们不但不拒绝三民主义，而且愿意坚决地实行三民主义，而且要求国民党和我们一道实行三民主义，而且号召全国人民实行三民主义。
+
+资产阶级尤其是大资产阶级既然退出革命，而且投靠帝国主义和封建势力，变为人民的敌人，则革命的动力便只剩下了无产阶级、农民和城市中的小资产阶级；革命的政党，便只剩下了共产党；革命的组织责任，便不得不落在唯一的革命政党共产党的肩上。
+
