--- a/毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/中国共产党在抗日时期的任务.md
+++ b/毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/中国共产党在抗日时期的任务.md
@@ -6,19 +6,19 @@
 
 （一）由于中日矛盾成为主要的矛盾、国内矛盾降到次要和服从的地位而产生的国际关系和国内阶级关系的变化，形成了目前形势的新的发展阶段。
 
-（二）中国很久以来就是处在两种剧烈的基本的矛盾中——帝国主义和中国之间的矛盾，封建制度和人民大众之间的矛盾。一九二七年以国民党为代表的资产阶级叛变革命，出卖民族利益于帝国主义，造成了工农政权和国民党政权尖锐对立，以及民族和民主革命的任务不能不由中国共产党单独负担的局面。
+（二）**中国很久以来就是处在两种剧烈的基本的矛盾中——帝国主义和中国之间的矛盾，封建制度和人民大众之间的矛盾。**一九二七年以国民党为代表的资产阶级叛变革命，出卖民族利益于帝国主义，造成了工农政权和国民党政权尖锐对立，以及民族和民主革命的任务不能不由中国共产党单独负担的局面。
 
 （三）一九三一年九一八事变[^1]特别是一九三五年华北事变[^2]以来的形势，使这些矛盾发生了如下的变化：
 
-甲、由一般帝国主义和中国的矛盾，变为特别突出特别尖锐的日本帝国主义和中国的矛盾。日本帝国主义实行了完全征服中国的政策。因此，便把若干其他帝国主义和中国的矛盾推入次要的地位，而在这些帝国主义和日本帝国主义之间，扩大了矛盾的裂口。因此，便在中国共产党和中国人民面前提出了中国的抗日民族统一战线和世界的和平阵线相结合的任务。这就是说，中国不但应当和中国人民的始终一贯的良友苏联相联合，而且应当按照可能，和那些在现时愿意保持和平而反对新的侵略战争的帝国主义国家建立共同反对日本帝国主义的关系。我们的统一战线应当以抗日为目的，不是同时反对一切帝国主义。
+甲、由一般帝国主义和中国的矛盾，变为特别突出特别尖锐的日本帝国主义和中国的矛盾。日本帝国主义实行了完全征服中国的政策。因此，便把若干其他帝国主义和中国的矛盾推入次要的地位，而在这些帝国主义和日本帝国主义之间，扩大了矛盾的裂口。因此，便在中国共产党和中国人民面前提出了中国的抗日民族统一战线和世界的和平阵线相结合的任务。**这就是说，中国不但应当和中国人民的始终一贯的良友苏联相联合，而且应当按照可能，和那些在现时愿意保持和平而反对新的侵略战争的帝国主义国家建立共同反对日本帝国主义的关系。我们的统一战线应当以抗日为目的，不是同时反对一切帝国主义。**
 
-乙、中日矛盾变动了国内的阶级关系，使资产阶级甚至军阀都遇到了存亡的问题，在他们及其政党内部逐渐地发生了改变政治态度的过程。这就在中国共产党和中国人民面前提出了建立抗日民族统一战线的任务。我们的统一战线是包括资产阶级及一切同意保卫祖国的人们的，是举国一致对外的。这个任务不但必须完成，而且是可能完成的。
+乙、中日矛盾变动了国内的阶级关系，使资产阶级甚至军阀都遇到了存亡的问题，在他们及其政党内部逐渐地发生了改变政治态度的过程。这就在中国共产党和中国人民面前提出了建立抗日民族统一战线的任务。**我们的统一战线是包括资产阶级及一切同意保卫祖国的人们的，是举国一致对外的。**这个任务不但必须完成，而且是可能完成的。
 
 丙、中日矛盾变动了全国人民大众（无产阶级、农民和城市小资产阶级）和共产党的情况和政策。人民更大规模地起来为救亡而斗争。共产党发展了在“九一八”后在三个条件（停止进攻革命根据地，保障人民的自由权利，武装人民）下和国民党中愿意同我们合作抗日的部分订立抗日协定的政策，成为建立全民族的抗日统一战线的政策。这就是我党一九三五年八月宣言[^3]，十二月决议[^4]，一九三六年五月放弃“反蒋”口号[^5]，八月致国民党书[^6]，九月民主共和国决议[^7]，十二月坚持和平解决西安事变[^8]，一九三七年二月致国民党三中全会电[^9]等等步骤之所由来。
 
 丁、由于帝国主义势力范围政策和中国半殖民地经济状况而来的中国军阀割据和军阀内战，在中日矛盾面前也起了变化。日本帝国主义赞助这种割据和内战，以便利其独占中国。若干其他帝国主义为了它们自己的利益，暂时地赞助中国的统一与和平。中国共产党和中国人民则以极大的努力反对内战与分裂，争取和平与统一。
 
-戊、中日民族矛盾的发展，在政治比重上，降低了国内阶级间的矛盾和政治集团间的矛盾的地位，使它们变为次要和服从的东西。但是国内阶级间的矛盾和政治集团间的矛盾本身依然存在着，并没有减少或消灭。中国和日本以外其他帝国主义国家之间的矛盾亦然。因此，就在中国共产党和中国人民面前提出了下列的任务：适当地调整国内国际在现时可能和必须调整的矛盾，使之适合于团结抗日的总任务。这就是中国共产党要求和平统一、民主政治、改良生活及与反对日本的外国进行谈判种种方针之所由来。
+戊、**中日民族矛盾的发展，在政治比重上，降低了国内阶级间的矛盾和政治集团间的矛盾的地位，使它们变为次要和服从的东西。但是国内阶级间的矛盾和政治集团间的矛盾本身依然存在着，并没有减少或消灭。**中国和日本以外其他帝国主义国家之间的矛盾亦然。因此，就在中国共产党和中国人民面前提出了下列的任务：适当地调整国内国际在现时可能和必须调整的矛盾，使之适合于团结抗日的总任务。这就是中国共产党要求和平统一、民主政治、改良生活及与反对日本的外国进行谈判种种方针之所由来。
 
 （四）从一九三五年十二月九日开始的中国革命新时期[^10]的第一阶段，至一九三七年二月国民党三中全会[^11]时，告一段落。此阶段内的重大事变，是学生界、文化界、舆论界的救亡运动，红军的进入西北，共产党的抗日民族统一战线政策的宣传和组织工作，上海和青岛的反日罢工[^12]，英国对日政策之趋向比较的强硬[^13]，两广事变[^14]，绥远战争和援绥运动[^15]，南京在中日谈判中的比较强硬的态度[^16]，西安事变，最后是南京国民党的三中全会。这些事变，统统都是围绕着中国和日本对立这一基本矛盾的，都是直接围绕着建立抗日民族统一战线这个历史要求的。这一阶段的革命基本任务，是争取国内和平，停止国内的武装冲突，以便团结一致，共同抗日。共产党在此阶段内提出了“停止内战，一致抗日”的号召，这一号召是基本上实现了，这就构成了抗日民族统一战线实际组成上的第一个必要条件。
 
@@ -28,7 +28,7 @@
 
 ## 为民主和自由而斗争
 
-（七）对于中国本部的侵略，日本帝国主义正在加紧准备着。和希特勒、墨索里尼在西方加紧准备的强盗战争相呼应，日本在东方正在用尽一切气力在确定的步骤上准备一举灭亡中国的条件——国内军事的、政治的、经济的、思想的条件，国际外交条件，中国亲日势力的扶植。所谓“中日提携”的宣传和某些外交步骤的缓和，正是出于战争前夜日本侵略政策的战术上的必要。中国正迫近着判定自己存亡的关头，中国的救亡抗战，必须用跑步的速度去准备。我们并不反对准备，但反对长期准备论，反对文恬武嬉饱食终日的亡国现象，这些都是实际上帮助敌人的，必须迅速地清除干净。
+（七）对于中国本部的侵略，日本帝国主义正在加紧准备着。和希特勒、墨索里尼在西方加紧准备的强盗战争相呼应，日本在东方正在用尽一切气力在确定的步骤上准备一举灭亡中国的条件——国内军事的、政治的、经济的、思想的条件，国际外交条件，中国亲日势力的扶植。所谓“中日提携”的宣传和某些外交步骤的缓和，正是出于战争前夜日本侵略政策的战术上的必要。中国正迫近着判定自己存亡的关头，中国的救亡抗战，必须用跑步的速度去准备。我们并不反对准备，但反对长期准备论，反对文恬武嬉(**形容文臣武将只贪图安逸，完全不把国家大事放在心上**)饱食终日的亡国现象，这些都是实际上帮助敌人的，必须迅速地清除干净。
 
 （八）政治上、军事上、经济上、教育上的国防准备，都是救亡抗战的必需条件，都是不可一刻延缓的。而争取政治上的民主自由，则为保证抗战胜利的中心一环。抗战需要全国的和平与团结，没有民主自由，便不能巩固已经取得的和平，不能增强国内的团结。抗战需要人民的动员，没有民主自由，便无从进行动员。没有巩固的和平与团结，没有人民的动员，抗战的前途便会蹈袭阿比西尼亚[^17]的覆辙。阿比西尼亚主要地是因为封建制度的统治，不能巩固内部的团结，不能发动人民的积极性，所以失败了。中国真正的坚实的抗日民族统一战线的建立及其任务的完成，没有民主是不行的。
 
@@ -38,9 +38,9 @@
 
 （一一）为了和平、民主和抗战，为了建立抗日的民族统一战线，中国共产党曾在致国民党三中全会电中向他们保证下列四项：（1）共产党领导的陕甘宁革命根据地的政府改名为中华民国特区政府，红军改名为国民革命军，受南京中央政府及军事委员会的指导；（2）在特区政府区域内，实行彻底的民主制度；（3）停止武力推翻国民党的方针；（4）停止没收地主的土地。这些保证，是必需的和许可的。因为只有如此，才能根据民族矛盾和国内矛盾在政治比重上的变化而改变国内两个政权敌对的状态，团结一致，共同赴敌。这是一种有原则有条件的让步，实行这种让步是为了去换得全民族所需要的和平、民主和抗战。然而让步是有限度的。在特区和红军中共产党领导的保持，在国共两党关系上共产党的独立性和批评自由的保持，这就是让步的限度，超过这种限度是不许可的。让步是两党的让步：国民党抛弃内战、独裁和对外不抵抗政策，共产党抛弃两个政权敌对的政策。我们以后者换得前者，重新与国民党合作，为救亡而奋斗。如果说这是共产党的投降，那只是阿Q主义[^19]和恶意的污蔑。
 
-（一二）共产党是否同意三民主义？我们的答复：是同意的[^20]。三民主义有它的历史变化。孙中山先生的革命的三民主义，曾经因为孙先生与共产党合作加以坚决执行而取得人民的信仰，成为一九二四年至一九二七年的胜利的革命的旗帜。但是一九二七年国民党排斥共产党（清党运动[^21]和反共战争），实行相反的政策，招致革命的失败，陷民族于危险的地位，于是三民主义也就失去了人民的信仰。现在民族危机极端严重，国民党已不能照旧不变地统治下去，因而全国人民和国民党中的爱国分子，又有两党合作的迫切要求。因此，重新整顿三民主义的精神，在对外争取独立解放的民族主义、对内实现民主自由的民权主义和增进人民幸福的民生主义之下，两党重新合作，并领导人民坚决地实行起来，是完全适合于中国革命的历史要求，而应为每一个共产党员所明白认识的。共产党人决不抛弃其社会主义和共产主义的理想，他们将经过资产阶级民主革命的阶段而达到社会主义和共产主义的阶段。中国共产党有自己的政治经济纲领。其最高的纲领是社会主义和共产主义，这是和三民主义有区别的。其在民主革命时期的纲领，亦比国内任何党派为彻底。但是共产党的民主革命纲领，与国民党第一次全国代表大会所宣布的三民主义的纲领，基本上是不相冲突的。因此，我们不但不拒绝三民主义，而且愿意坚决地实行三民主义，而且要求国民党和我们一道实行三民主义，而且号召全国人民实行三民主义。我们认为，共产党、国民党、全国人民，应当共同一致为民族独立、民权自由、民生幸福这三大目标而奋斗。
+（一二）共产党是否同意三民主义？我们的答复：是同意的[^20]。三民主义有它的历史变化。孙中山先生的革命的三民主义，曾经因为孙先生与共产党合作加以坚决执行而取得人民的信仰，成为一九二四年至一九二七年的胜利的革命的旗帜。但是一九二七年国民党排斥共产党（清党运动[^21]和反共战争），实行相反的政策，招致革命的失败，陷民族于危险的地位，于是三民主义也就失去了人民的信仰。现在民族危机极端严重，国民党已不能照旧不变地统治下去，因而全国人民和国民党中的爱国分子，又有两党合作的迫切要求。因此，重新整顿三民主义的精神，在对外争取独立解放的民族主义、对内实现民主自由的民权主义和增进人民幸福的民生主义之下，两党重新合作，并领导人民坚决地实行起来，是完全适合于中国革命的历史要求，而应为每一个共产党员所明白认识的。共产党人决不抛弃其社会主义和共产主义的理想，他们将经过资产阶级民主革命的阶段而达到社会主义和共产主义的阶段。**中国共产党有自己的政治经济纲领。其最高的纲领是社会主义和共产主义，这是和三民主义有区别的。其在民主革命时期的纲领，亦比国内任何党派为彻底。但是共产党的民主革命纲领，与国民党第一次全国代表大会所宣布的三民主义的纲领，基本上是不相冲突的。因此，我们不但不拒绝三民主义，而且愿意坚决地实行三民主义，而且要求国民党和我们一道实行三民主义，而且号召全国人民实行三民主义。**我们认为，共产党、国民党、全国人民，应当共同一致为民族独立、民权自由、民生幸福这三大目标而奋斗。
 
-（一三）我们过去的工农民主共和国的口号是否错了呢？没有错的。资产阶级尤其是大资产阶级既然退出革命，而且投靠帝国主义和封建势力，变为人民的敌人，则革命的动力便只剩下了无产阶级、农民和城市中的小资产阶级；革命的政党，便只剩下了共产党；革命的组织责任，便不得不落在唯一的革命政党共产党的肩上。仅仅共产党继续高举革命的旗帜，保持革命的传统，提出工农民主共和国的口号，且为此口号而艰苦奋斗了许多年。工农民主共和国的口号，不是违背资产阶级民主革命任务的，而是坚决地执行资产阶级民主革命任务的。我们在实际斗争中没有一项政策不适合这种任务。我们的政策，包括没收地主土地和实行八小时工作制在内，并没有超出资本主义范畴内私有财产制的界限以外，并没有实行社会主义。新的民主共和国所包括的成分是什么呢？它包括无产阶级、农民、城市小资产阶级、资产阶级及一切国内同意民族和民主革命的分子，它是这些阶级的民族和民主革命的联盟。这里的特点是包括了资产阶级，这是因为资产阶级在今天的环境下，又有重新参加抗日的可能，所以无产阶级政党不应该拒绝他们，而应该招致他们，恢复和他们共同斗争的联盟，以利于中国革命的前进。为了停止国内的武装冲突，共产党愿意停止使用暴力没收地主土地的政策，而准备在新的民主共和国建设过程中，用立法和别的适当方法去解决土地问题。中国土地属于日本人，还是属于中国人，这是首先待解决的问题。既是在保卫中国的大前提之下来解决农民的土地问题，那末，由暴力没收方法转变到新的适当方法，就是完全必要的。
+（一三）我们过去的工农民主共和国的口号是否错了呢？没有错的。**资产阶级尤其是大资产阶级既然退出革命，而且投靠帝国主义和封建势力，变为人民的敌人，则革命的动力便只剩下了无产阶级、农民和城市中的小资产阶级；革命的政党，便只剩下了共产党；革命的组织责任，便不得不落在唯一的革命政党共产党的肩上。**仅仅共产党继续高举革命的旗帜，保持革命的传统，提出工农民主共和国的口号，且为此口号而艰苦奋斗了许多年。工农民主共和国的口号，不是违背资产阶级民主革命任务的，而是坚决地执行资产阶级民主革命任务的。我们在实际斗争中没有一项政策不适合这种任务。我们的政策，包括没收地主土地和实行八小时工作制在内，并没有超出资本主义范畴内私有财产制的界限以外，并没有实行社会主义。新的民主共和国所包括的成分是什么呢？它包括无产阶级、农民、城市小资产阶级、资产阶级及一切国内同意民族和民主革命的分子，它是这些阶级的民族和民主革命的联盟。这里的特点是包括了资产阶级，这是因为资产阶级在今天的环境下，又有重新参加抗日的可能，所以无产阶级政党不应该拒绝他们，而应该招致他们，恢复和他们共同斗争的联盟，以利于中国革命的前进。为了停止国内的武装冲突，共产党愿意停止使用暴力没收地主土地的政策，而准备在新的民主共和国建设过程中，用立法和别的适当方法去解决土地问题。中国土地属于日本人，还是属于中国人，这是首先待解决的问题。既是在保卫中国的大前提之下来解决农民的土地问题，那末，由暴力没收方法转变到新的适当方法，就是完全必要的。
 
 工农民主共和国口号，过去的提出和今天的放弃，都是正确的。
 
