--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -449,3 +449,8 @@
 
 资产阶级尤其是大资产阶级既然退出革命，而且投靠帝国主义和封建势力，变为人民的敌人，则革命的动力便只剩下了无产阶级、农民和城市中的小资产阶级；革命的政党，便只剩下了共产党；革命的组织责任，便不得不落在唯一的革命政党共产党的肩上。
 
+在某种历史环境能够参加反对帝国主义和反对封建制度的中国资产阶级，由于它在经济上政治上的软弱性，在另一种历史环境就要动摇变节，这一规律，在中国历史上已经证明了。因此，中国反帝反封建的资产阶级民主革命的任务，历史已判定不能经过资产阶级的领导，而必须经过无产阶级的领导，才能够完成。并且只有充分发扬无产阶级在民主革命中的坚持性和彻底性，才能克服资产阶级的那种先天的动摇性和不彻底性，而使革命不至于流产。
+
+在不失掉确定的政治目标的原则上，建立与同盟者的适当的关系，发展和巩固这个同盟。
+
+陈独秀尾巴主义的复活是不能容许的，这是资产阶级改良主义在无产阶级队伍中的反映。降低党的立场，模糊党的面目，牺牲工农利益去适合资产阶级改良主义的要求，将必然引导革命趋于失败。
