--- a/毛泽东选集(1-7卷静火版)/第一卷/本书出版的说明.md
+++ b/毛泽东选集(1-7卷静火版)/第一卷/本书出版的说明.md
@@ -14,4 +14,5 @@
 
 <div style="text-align: right;">中共中央毛泽东选集出版委员会</div>
 
-<div style="text-align: right;">一九五一年八月二十五日</div>
+<p style="text-align: right;">一九五一年八月二十五日</p>
+
