--- a/毛泽东选集(1-7卷静火版)/第一卷/第二版出版说明.md
+++ b/毛泽东选集(1-7卷静火版)/第一卷/第二版出版说明.md
@@ -8,6 +8,6 @@
 
 《毛泽东选集》第一至四卷的修订工作，主要是校订注释，改正注释中某些错讹的史实和不准确的提法，增补一些新的注释，删去少量的注释。注释校订工作是根据毛泽东同志的意见，从一九六二年起着手进行的，后因“文化大革命”而中断。这次校订，在六十年代工作的基础上，吸收了近二三十年来史料收集和学术研究的成果，对注释又作了进一步的修改和增补。
 
-<div style="text-align: right;">中共中央文献编辑委员会</div>
+<p align=right>中共中央文献编辑委员会</p>
 
 <p align=right>一九九一年二月</p>
