--- a/毛泽东选集(1-7卷静火版)(一卷本).md
+++ b/毛泽东选集(1-7卷静火版)(一卷本).md
@@ -14,9 +14,9 @@
 
 《毛泽东选集》第一至四卷的修订工作，主要是校订注释，改正注释中某些错讹的史实和不准确的提法，增补一些新的注释，删去少量的注释。注释校订工作是根据毛泽东同志的意见，从一九六二年起着手进行的，后因“文化大革命”而中断。这次校订，在六十年代工作的基础上，吸收了近二三十年来史料收集和学术研究的成果，对注释又作了进一步的修改和增补。
 
-<div style="text-align: right;">中共中央文献编辑委员会</div>
+<p align=right>中共中央文献编辑委员会</p>
 
-<div style="text-align: right;">一九九一年二月</div>
+<p align=right>一九九一年二月</p>
 
 ### 本书出版的说明
 
@@ -32,9 +32,9 @@
 
 第四，本选集有两种装订的本子。一种是各时期的著作合订的一卷本，另一种是四卷本。四卷本的第一卷包括第一次国内革命战争时期和第二次国内革命战争时期的著作；第二卷和第三卷包括抗日战争时期的著作；第四卷包括第三次国内革命战争时期的著作。
 
-<div style="text-align: right;">中共中央毛泽东选集出版委员会</div>
+<p align=right>中共中央毛泽东选集出版委员会</p>
 
-<div style="text-align: right;">一九五一年八月二十五日</div>
+<p align=right>一九五一年八月二十五日</p>
 
 ### 第一次国内革命战争时期(1924.1-1927.7)
 
