--- a/毛泽东选集-读书笔记/第一卷/本书出版的说明.md
+++ b/毛泽东选集-读书笔记/第一卷/本书出版的说明.md
@@ -12,6 +12,7 @@
 
 第四，本选集有两种装订的本子。一种是各时期的著作合订的一卷本，另一种是四卷本。四卷本的第一卷包括第一次国内革命战争时期和第二次国内革命战争时期的著作；第二卷和第三卷包括抗日战争时期的著作；第四卷包括第三次国内革命战争时期的著作。
 
-<div style="text-align: right;">中共中央毛泽东选集出版委员会</div>
+<p align=right>中共中央毛泽东选集出版委员会</p>
 
-<div style="text-align: right;">一九五一年八月二十五日</div>
+<p align=right>一九五一年八月二十五日</p>
+
