--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -75,3 +75,11 @@
 #### 中国共产党在抗日时期的任务(1937.5.3)
 
 [中国共产党在抗日时期的任务](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/中国共产党在抗日时期的任务.md)
+
+#### 为争取千百万群众进入抗日民族统一战线而斗争(1937.5.8)
+
+[为争取千百万群众进入抗日民族统一战线而斗争](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/为争取千百万群众进入抗日民族统一战线而斗争.md)
+
+#### 实践论(1937.7)
+
+[实践论](毛泽东选集(1-7卷静火版)/第一卷/第二次国内革命战争时期/实践论.md)
