--- a/毛泽东选集-读书笔记.md
+++ b/毛泽东选集-读书笔记.md
@@ -454,3 +454,20 @@
 在不失掉确定的政治目标的原则上，建立与同盟者的适当的关系，发展和巩固这个同盟。
 
 陈独秀尾巴主义的复活是不能容许的，这是资产阶级改良主义在无产阶级队伍中的反映。降低党的立场，模糊党的面目，牺牲工农利益去适合资产阶级改良主义的要求，将必然引导革命趋于失败。
+
+#### 为争取千百万群众进入抗日民族统一战线而斗争(1937.5.8)
+
+和平实现与和平巩固是两件事。历史暂时地走回头路是可能的，和平发生波折是可能的，原因就在于日本帝国主义和汉奸亲日派的存在。
+
+共产党有本领把革命逐步地推向前进，但没有本领把全国的坏事在一个早晨去掉干净。
+
+旧毒，污浊，革命进程中的某些波折，以及可能的回头路，只有斗争和努力才能够克服，而且需要长期的斗争和努力。
+
+一时的后退现象，不能代替总的历史规律。
+
+无产阶级的坚固的同盟者是农民，其次是城市小资产阶级。同我们争领导权的是资产阶级。
+
+对资产阶级的动摇和不彻底性的克服，依靠群众的力量和正确的政策，否则资产阶级将反过来克服无产阶级。
+
+#### 实践论(1937.7)
+
