--- a/毛泽东选集(1-7卷静火版)(一卷本).md
+++ b/毛泽东选集(1-7卷静火版)(一卷本).md
@@ -1878,3 +1878,164 @@
 [^1-2-13-20]: 这里所说的三民主义，是指孙中山在《中国国民党第一次全国代表大会宣言》中所重新解释的三民主义。中国共产党在资产阶级民主革命阶段中同意孙中山重新解释的三民主义中革命的民族主义、民权主义和民生主义这三个政治原则，但并不同意他所代表的资产阶级和小资产阶级的宇宙观或理论体系。参见本书第二卷《新民主主义论》第九节和第十节。
 [^1-2-13-21]: 一九二四年，孙中山在共产党人的帮助下，将国民党改组成各阶级的民主革命的联盟。当时，中国共产党的许多党员曾以个人名义参加国民党。一九二七年蒋介石、汪精卫相继叛变革命以后，在全国各地屠杀共产党人以及国民党内许多真正拥护孙中山三大政策的左派分子，他们称之为“清党运动”。从此，国民党基本上变成代表大地主大资产阶级的反动集团。
 [^1-2-13-22]: 这里是指一九二七年上半年陈独秀右倾投降主义的领导所造成的情况。
+
+#### 为争取千百万群众进入抗日民族统一战线而斗争(1937.5.8)
+
+**为争取千百万群众进入抗日民族统一战线而斗争**[^1-2-14-*]
+
+（一九三七年五月八日）
+
+同志们！对于我的报告——《中国共产党在抗日时期的任务》，经这几天的讨论，除了个别同志提出了不同意见之外，大家都已表示同意。他们这些不同的意见，颇带重要性，因此我的结论，首先就来讨论这些意见，然后再说到一些其他的问题。
+
+##### 和平问题
+
+我们党为国内和平而斗争，差不多有两年的时间了。国民党三中全会[^1-2-14-1]后，我们说和平已经取得，“争取和平”的阶段已经过去，新的任务是“巩固和平”，并指出这是同“争取民主”相关联的——用争取民主去巩固和平。我们的这种意见，按照几个同志的说法却不能成立。他们的结论必是相反的，或者是动摇于两者之间的。因为他们说：“日本后退了[^1-2-14-2]，南京更动摇了，民族矛盾下降，国内矛盾上升。”根据这种估计，当然无所谓新阶段和新任务，情况回到旧阶段，或者还不如。这种意见，我以为是不对的。
+
+我们说和平取得了，并不是说和平巩固了，相反，我们说它是不巩固的。和平实现与和平巩固是两件事。历史暂时地走回头路是可能的，和平发生波折是可能的，原因就在于日本帝国主义和汉奸亲日派的存在。然而西安事变[^1-2-14-3]后和平实现是事实，这种情况是由多方面促成的（日本进攻的基本方针，苏联和英美法的赞助和平，中国人民的逼迫，共产党在西安事变中的和平方针及停止两个政权敌对的政策，资产阶级的分化，国民党的分化等等），不是蒋介石一个人所能决定和推翻的。要推翻和平必须同多方面势力作战，并且必须同日本帝国主义和亲日派靠拢，才能成功。没有问题，日本帝国主义和亲日派还在企图使中国继续内战。和平没有巩固，正是因为这一点。在这种情况下，我们的结论不是回到“停止内战”或“争取和平”的旧口号去，而是前进一步，提出“争取民主”的新口号，只有这样才能巩固和平，也只有这样才能实现抗战。为什么提出“巩固和平”、“争取民主”、“实现抗战”这样三位一体的口号？为的是把我们的革命车轮推进一步，为的是情况已经允许我们进一步了。如果否认新阶段和新任务，否认国民党的“开始转变”，并且逻辑的结论也将不得不否认一年半以来一切为争取和平而斗争的各派势力努力的成绩，那末，只是把自己停顿在旧位置，一步也没有前进。
+
+为什么这些同志作出这种不妥当的估计呢？原因在于他们观察时局不从根本之点出发，而从许多局部和一时的现象（佐藤外交，苏州审判[^1-2-14-4]，压制罢工，东北军东调[^1-2-14-5]，杨虎城出洋[^1-2-14-6]等等）出发，于是形成一幅暗淡的画图。我们说国民党已经开始转变，但我们同时即说国民党并没有彻底转变。国民党的十年反动政策，要它彻底转变而不用我们和人民的新的更多更大的努力，这是不能设想的事情。不少号称“左”倾的人们，平日痛骂国民党，在西安事变中主张杀蒋和“打出潼关去”[^1-2-14-7]，及至和平刚刚实现又发现苏州审判等事，就用惊诧的口气发问道：“为什么蒋介石又这样干？”这些人们须知：共产党员和蒋介石都不是神仙，且都不是孤立的个人，而是处于一个党派、一个阶级里头的分子。共产党有本领把革命逐步地推向前进，但没有本领把全国的坏事在一个早晨去掉干净。蒋介石或国民党已经开始了他们的转变，但没有全国人民的更大努力，也决不会在一个早晨把他们的十年污浊洗掉得干净。我们说运动的方向是向着和平、民主和抗战，但不是说不经努力能够把内战、独裁和不抵抗的旧毒扫除干净。旧毒，污浊，革命进程中的某些波折，以及可能的回头路，只有斗争和努力才能够克服，而且需要长期的斗争和努力。
+
+“他们是一心要破坏我们。”对的，他们总是在企图破坏我们，我完全承认这种估计的正确，不估计这一点就等于睡觉。但问题在破坏的方式是否有了改变。我以为是有了改变的。从战争和屠杀的政策改变到改良和欺骗的政策，从硬的政策改变到软的政策，从军事政策改变到政治政策。为什么有这种改变？资产阶级和国民党处在日本帝国主义面前不得不暂时向无产阶级找同盟军，也和我们向资产阶级找同盟军一样。观察问题应从这一点出发。国际上，法国政府由仇苏变为联苏[^1-2-14-8]，同此道理。我们在国内的任务，也从军事的变到政治的。我们不需要阴谋诡计，我们的目的在团结资产阶级和国民党中一切同情抗日的分子，共同战胜日本帝国主义。
+
+##### 民主问题
+
+“强调民主是错误的，仅仅应该强调抗日；没有抗日的直接行动，就不能有民主运动；多数人只要抗日不要民主，再来一个‘一二九’就对了。”
+
+让我首先发出一点问题：能够在过去阶段中（一九三五年一二九运动[^1-2-14-9]到一九三七年二月国民党三中全会）说，多数人只要抗日不要和平吗？过去强调和平是错了吗？没有抗日的直接行动就不能有和平运动吗？（西安事变和国民党三中全会正在绥远抗战[^1-2-14-10]结束之后，现在也还没有绥远抗战或“一二九”。）谁人不知：要抗日就要和平，无和平不能抗日，和平是抗日的条件。前一阶段一切直接间接的抗日行动（从“一二九”起到国民党三中全会止）都围绕着争取和平，和平是前一阶段的中心一环，是抗日运动在前一阶段中的最本质的东西。
+
+对于抗日任务，民主也是新阶段中最本质的东西，为民主即是为抗日。抗日与民主互为条件，同抗日与和平、民主与和平互为条件一样。民主是抗日的保证，抗日能给予民主运动发展以有利条件。
+
+新阶段中，我们希望有、也将会有许多直接的间接的反日斗争，这些将推动对日抗战，也大有助于民主运动。然而历史给予我们的革命任务，中心的本质的东西是争取民主。“民主”，“民主”是错的吗？我以为是不错的。
+
+“日本退后了，英日向着平衡，南京更动摇了。”这是一种不了解历史发展规律而发生的不适当的忧虑。日本如因国内革命而根本后退，这是有助于中国革命的，是我们所希望的，是世界侵略战线崩溃的开始，为什么还忧虑？然而究竟还不是这样；佐藤外交是大战的准备，大战在我们面前。英国的动摇政策只能落得无结果，这是英国和日本的不同利害决定了的。南京如果是长期动摇，便变为全国人民之敌，也为南京的利益所不许。一时的后退现象，不能代替总的历史规律。因此不能否认新阶段，也不能否认民主任务的提出。况且无论什么情况，民主的口号都能适应，民主对于中国人是缺乏而不是多余，这是人人明白的。何况实际情况已经表明，指出新阶段和提出民主任务，是向抗战接近一步的东西。时局已经前进了，不要把它拉向后退。
+
+“为什么强调国民大会？”因为它是可能牵涉到全部生活的东西，因为它是从反动独裁到民主的桥梁，因为它带着国防性，因为它是合法的。收复冀东察北、反对走私、反对“经济提携”等等，如像同志们所提出的，都是很对的，但这丝毫也不与民主任务和国民大会相矛盾，二者正是互相完成的，但中心的东西是国民大会和人民自由。
+
+日常的反日斗争和人民生活斗争，要和民主运动相配合，这是完全对的，也是没有任何争论的。但目前阶段里中心和本质的东西，是民主和自由。
+
+##### 革命前途问题
+
+有几个同志发出了这个问题，我的答复只能是简单的。
+
+两篇文章，上篇与下篇，只有上篇做好，下篇才能做好。坚决地领导民主革命，是争取社会主义胜利的条件。我们是为着社会主义而斗争，这是和任何革命的三民主义者不相同的。现在的努力是朝着将来的大目标的，失掉这个大目标，就不是共产党员了。然而放松今日的努力，也就不是共产党员。
+
+我们是革命转变论[^1-2-14-11]者，主张民主革命转变到社会主义方向去。民主革命中将有几个发展阶段，都在民主共和国口号下面。从资产阶级占优势到无产阶级占优势，这是一个斗争的长过程，争取领导权的过程，依靠着共产党对无产阶级觉悟程度组织程度的提高，对农民、对城市小资产阶级觉悟程度组织程度的提高。
+
+无产阶级的坚固的同盟者是农民，其次是城市小资产阶级。同我们争领导权的是资产阶级。
+
+对资产阶级的动摇和不彻底性的克服，依靠群众的力量和正确的政策，否则资产阶级将反过来克服无产阶级。
+
+不流血的转变是我们所希望的，我们应该力争这一着，结果将看群众的力量如何而定。
+
+我们是革命转变论者，不是托洛茨基主义的“不断革命”论[^1-2-14-12]者。我们主张经过民主共和国的一切必要的阶段，到达于社会主义。我们反对尾巴主义，但又反对冒险主义和急性病。
+
+因为资产阶级参加革命的暂时性而不要资产阶级，指联合资产阶级的抗日派（在半殖民地）为投降主义，这是托洛茨基主义的说法，我们是不能同意的。今天的联合资产阶级抗日派，正是走向社会主义的必经的桥梁。
+
+##### 干部问题
+
+指导伟大的革命，要有伟大的党，要有许多最好的干部。在一个四亿五千万人的中国里面，进行历史上空前的大革命，如果领导者是一个狭隘的小团体是不行的，党内仅有一些委琐不识大体、没有远见、没有能力的领袖和干部也是不行的。中国共产党早就是一个大政党，经过反动时期的损失它依然是一个大政党，它有了许多好的领袖和干部，但是还不够。我们党的组织要向全国发展，要自觉地造就成万数的干部，要有几百个最好的群众领袖。这些干部和领袖懂得马克思列宁主义，有政治远见，有工作能力，富于牺牲精神，能独立解决问题，在困难中不动摇，忠心耿耿地为民族、为阶级、为党而工作。党依靠着这些人而联系党员和群众，依靠着这些人对于群众的坚强领导而达到打倒敌人之目的。这些人不要自私自利，不要个人英雄主义和风头主义，不要懒惰和消极性，不要自高自大的宗派主义，他们是大公无私的民族的阶级的英雄，这就是共产党员、党的干部、党的领袖应该有的性格和作风。我们死去的若干万数的党员，若干千数的干部和几十个最好的领袖遗留给我们的精神，也就是这些东西。我们无疑地应该学习这些东西，把自己改造得更好一些，把自己提高到更高的革命水平。但是还不够，还要作为一种任务，在全党和全国发现许多新的干部和领袖。我们的革命依靠干部，正像斯大林所说的话：“干部决定一切。”[^1-2-14-13]
+
+##### 党内民主问题
+
+要达到这种目的，党内的民主是必要的。要党有力量，依靠实行党的民主集中制去发动全党的积极性。在反动和内战时期，集中制表现得多一些。在新时期，集中制应该密切联系于民主制。用民主制的实行，发挥全党的积极性。用发挥全党的积极性，锻炼出大批的干部，肃清宗派观念的残余，团结全党像钢铁一样。
+
+##### 大会的团结和全党的团结
+
+大会中政治问题上的不同意见，经过说明已经归于一致了；过去中央路线和个别同志领导的退却路线之间的分歧，也已经解决了[^1-2-14-14]，表示了我们的党已经团结得很坚固。这种团结是当前民族和民主革命的最重要的基础；因为只有经过共产党的团结，才能达到全阶级和全民族的团结，只有经过全阶级全民族的团结，才能战胜敌人，完成民族和民主革命的任务。
+
+##### 为争取千百万群众进入抗日民族统一战线而斗争
+
+我们的正确的政治方针和坚固的团结，是为着争取千百万群众进入抗日民族统一战线这个目的。无产阶级、农民、城市小资产阶级的广大群众，有待于我们宣传、鼓动和组织的工作。资产阶级抗日派的和我们建立同盟，也还待我们的进一步工作。把党的方针变为群众的方针，还须要我们长期坚持的、百折不挠的、艰苦卓绝的、耐心而不怕麻烦的努力。没有这样一种努力是一切都不成功的。抗日民族统一战线的组成、巩固及其任务的完成，民主共和国在中国的实现，丝毫也不能离开这一争取群众的努力。如果经过这种努力而争取千百万群众在我们领导之下的话，那我们的革命任务就能够迅速地完成。我们的努力将确定地打倒日本帝国主义，并实现全部的民族解放和社会解放。
+
+##### 注释
+
+[^1-2-14-*]: 这是毛泽东在一九三七年五月二日至十四日在延安召开的中国共产党全国代表会议上所作的结论。
+[^1-2-14-1]: 见本卷《中国共产党在抗日时期的任务》注[11]。
+[^1-2-14-2]: 西安事变以后，日本帝国主义为了破坏当时已开始实现的中国国内和平和正在逐渐形成中的抗日民族统一战线，在加紧准备以武力征服中国的同时，表面上对国民党当局暂时采取了和缓姿态。一九三六年十二月和一九三七年一月，日本帝国主义曾两次唆使伪蒙古军政府发表通电，拥护国民党政府集中军力进攻红军和张学良、杨虎城部队，宣称同国民党军队停止作战。一九三七年三月，日本外相佐藤尚武诡称要调整中日两国的关系，协助中国的“统一和复兴”。日本财阀儿玉谦次等还组织了所谓“经济考察团”来华，诡称要协助中国建成现代国家。所谓“佐藤外交”和“日本后退”，就是指当时日本帝国主义玩弄的这一套骗人的阴谋。
+[^1-2-14-3]: 参见本卷《关于蒋介石声明的声明》注[1]。
+[^1-2-14-4]: 一九三六年十一月，国民党政府逮捕了全国各界救国联合会领导人沈钧儒、章乃器、邹韬奋、李公朴、王造时、沙千里、史良等七人，随后又把他们押到苏州，在国民党江苏高等法院看守所内监禁。一九三七年四月，这个法院的检察官对沈等提出“公诉”，并于六月十一日和六月二十五日两次开庭审判，说他们违犯了所谓“危害民国紧急治罪法”。
+[^1-2-14-5]: 西安事变以前，东北军驻在陕西、甘肃境内，同西北红军直接接触，深受中国共产党抗日民族统一战线政策的影响，促成了西安事变的发生。一九三七年三月，国民党反动派为了隔离红军和东北军的关系，并且乘机分裂东北军内部，强令东北军东调河南、安徽和苏北地区。
+[^1-2-14-6]: 杨虎城（一八九三——一九四九），陕西蒲城人，原西北军爱国将领。曾任国民党军第十七路军总指挥、西安绥靖公署主任。一九三六年十二月和张学良一起发动西安事变。张学良在释放蒋介石后送蒋回南京，即被长期囚禁。杨虎城也被国民党反动派迫令于一九三七年四月二十七日辞职，六月二十九日出国“考察”。抗日战争爆发后，杨虎城于一九三七年十一月回国准备参加抗日工作，但不久也被蒋介石逮捕长期监禁，到一九四九年九月人民解放军迫近重庆的时候，在集中营内遇害。
+[^1-2-14-7]: 潼关是陕西、河南、山西三省交界处的军事重地。西安事变时，国民党中央军驻在潼关以东，准备进攻东北军和西北军。当时某些号称“左”倾的人们（张国焘是其中之一），主张“打出潼关去”，向国民党中央军进攻。这种主张是同中共中央和平解决西安事变的方针相反的。
+[^1-2-14-8]: 一九一八年至一九二○年，法国政府积极地参加了十四个国家对苏维埃共和国的武装干涉，并在这次干涉失败以后继续执行孤立苏联的反动政策。直到一九三五年五月，由于苏联的日益强大及其和平外交政策在法国人民中的影响，由于法西斯德国对法国的威胁，法国政府才同苏联缔结了互助条约。但是，法国政府后来并未忠实地执行这个条约。
+[^1-2-14-9]: 见本卷《论反对日本帝国主义的策略》注[8]。
+[^1-2-14-10]: 见本卷《中国共产党在抗日时期的任务》注[15]。
+[^1-2-14-11]: 参见马克思、恩格斯《共产党宣言》第四部分（《马克思恩格斯选集》第1卷，人民出版社1972年版，第284—286页），列宁《社会民主党在民主革命中的两种策略》第十二、十三部分（《列宁全集》第11卷，人民出版社1987年版，第76—97页）和《联共（布）党史简明教程》第三章第三节（人民出版社1975年版，第68—84页）。
+[^1-2-14-12]: 参见斯大林《论列宁主义基础》第三部分，《十月革命和俄国共产党人的策略》第二部分，《论列宁主义的几个问题》第三部分（《斯大林选集》上卷，人民出版社1979年版，第199—214、279—293、400—402页）。
+[^1-2-14-13]: 见一九三五年五月四日斯大林在克里姆林宫举行的红军学院学员毕业典礼上的讲话。原文如下：“人才，干部是世界上所有宝贵的资本中最宝贵最有决定意义的资本。应该了解：在我们目前的条件下，‘干部决定一切’。”（《斯大林选集》下卷，人民出版社1979年版，第373页）
+[^1-2-14-14]: 这里所说的分歧，指一九三五年至一九三六年间党中央路线和张国焘退却路线之间的分歧。一九三六年十月，红军第四方面军到达甘肃会宁地区同红军第一方面军会合。一九三七年三月下旬，中共中央在延安召开政治局扩大会议，讨论国内政治形势和党的任务，对张国焘路线的错误及其危害进行了系统的批判和总结，使党和红军在思想上、政治上和组织上达到新的一致，标志着这个分歧已经解决。至于后来张国焘公开叛党，堕落为反革命，那已不是领导路线上的问题，而只是个人的叛变行动了。
+
+#### 实践论(1937.7)
+
+**实践论**[^1-2-15-*]
+
+##### 论认识和实践的关系——知和行的关系
+
+（一九三七年七月）
+
+马克思以前的唯物论，离开人的社会性，离开人的历史发展，去观察认识问题，因此不能了解认识对社会实践的依赖关系，即认识对生产和阶级斗争的依赖关系。
+
+首先，马克思主义者认为人类的生产活动是最基本的实践活动，是决定其他一切活动的东西。人的认识，主要地依赖于物质的生产活动，逐渐地了解自然的现象、自然的性质、自然的规律性、人和自然的关系；而且经过生产活动，也在各种不同程度上逐渐地认识了人和人的一定的相互关系。一切这些知识，离开生产活动是不能得到的。在没有阶级的社会中，每个人以社会一员的资格，同其他社会成员协力，结成一定的生产关系，从事生产活动，以解决人类物质生活问题。在各种阶级的社会中，各阶级的社会成员，则又以各种不同的方式，结成一定的生产关系，从事生产活动，以解决人类物质生活问题。这是人的认识发展的基本来源。
+
+人的社会实践，不限于生产活动一种形式，还有多种其他的形式，阶级斗争，政治生活，科学和艺术的活动，总之社会实际生活的一切领域都是社会的人所参加的。因此，人的认识，在物质生活以外，还从政治生活文化生活中（与物质生活密切联系），在各种不同程度上，知道人和人的各种关系。其中，尤以各种形式的阶级斗争，给予人的认识发展以深刻的影响。在阶级社会中，每一个人都在一定的阶级地位中生活，各种思想无不打上阶级的烙印。
+
+马克思主义者认为人类社会的生产活动，是一步又一步地由低级向高级发展，因此，人们的认识，不论对于自然界方面，对于社会方面，也都是一步又一步地由低级向高级发展，即由浅入深，由片面到更多的方面。在很长的历史时期内，大家对于社会的历史只能限于片面的了解，这一方面是由于剥削阶级的偏见经常歪曲社会的历史，另方面，则由于生产规模的狭小，限制了人们的眼界。人们能够对于社会历史的发展作全面的历史的了解，把对于社会的认识变成了科学，这只是到了伴随巨大生产力——大工业而出现近代无产阶级的时候，这就是马克思主义的科学。
+
+马克思主义者认为，只有人们的社会实践，才是人们对于外界认识的真理性的标准。实际的情形是这样的，只有在社会实践过程中（物质生产过程中，阶级斗争过程中，科学实验过程中），人们达到了思想中所预想的结果时，人们的认识才被证实了。人们要想得到工作的胜利即得到预想的结果，一定要使自己的思想合于客观外界的规律性，如果不合，就会在实践中失败。人们经过失败之后，也就从失败取得教训，改正自己的思想使之适合于外界的规律性，人们就能变失败为胜利，所谓“失败者成功之母”，“吃一堑长一智”，就是这个道理。辩证唯物论的认识论把实践提到第一的地位，认为人的认识一点也不能离开实践，排斥一切否认实践重要性、使认识离开实践的错误理论。列宁这样说过：“实践高于（理论的）认识，因为它不但有普遍性的品格，而且还有直接现实性的品格。”[^1-2-15-1]马克思主义的哲学辩证唯物论有两个最显著的特点：一个是它的阶级性，公然申明辩证唯物论是为无产阶级服务的；再一个是它的实践性，强调理论对于实践的依赖关系，理论的基础是实践，又转过来为实践服务。判定认识或理论之是否真理，不是依主观上觉得如何而定，而是依客观上社会实践的结果如何而定。真理的标准只能是社会的实践。实践的观点是辩证唯物论的认识论之第一的和基本的观点。[^1-2-15-2]
+
+然而人的认识究竟怎样从实践发生，而又服务于实践呢？这只要看一看认识的发展过程就会明了的。
+
+原来人在实践过程中，开始只是看到过程中各个事物的现象方面，看到各个事物的片面，看到各个事物之间的外部联系。例如有些外面的人们到延安来考察，头一二天，他们看到了延安的地形、街道、屋宇，接触了许多的人，参加了宴会、晚会和群众大会，听到了各种说话，看到了各种文件，这些就是事物的现象，事物的各个片面以及这些事物的外部联系。这叫做认识的感性阶段，就是感觉和印象的阶段。也就是延安这些各别的事物作用于考察团先生们的感官，引起了他们的感觉，在他们的脑子中生起了许多的印象，以及这些印象间的大概的外部的联系，这是认识的第一个阶段。在这个阶段中，人们还不能造成深刻的概念，作出合乎论理（即合乎逻辑）的结论。
+
+社会实践的继续，使人们在实践中引起感觉和印象的东西反复了多次，于是在人们的脑子里生起了一个认识过程中的突变（即飞跃），产生了概念。概念这种东西已经不是事物的现象，不是事物的各个片面，不是它们的外部联系，而是抓着了事物的本质，事物的全体，事物的内部联系了。概念同感觉，不但是数量上的差别，而且有了性质上的差别。循此继进，使用判断和推理的方法，就可产生出合乎论理的结论来。《三国演义》上所谓“眉头一皱计上心来”，我们普通说话所谓“让我想一想”，就是人在脑子中运用概念以作判断和推理的工夫。这是认识的第二个阶段。外来的考察团先生们在他们集合了各种材料，加上他们“想了一想”之后，他们就能够作出“共产党的抗日民族统一战线的政策是彻底的、诚恳的和真实的”这样一个判断了。在他们作出这个判断之后，如果他们对于团结救国也是真实的的话，那末他们就能够进一步作出这样的结论：“抗日民族统一战线是能够成功的。”这个概念、判断和推理的阶段，在人们对于一个事物的整个认识过程中是更重要的阶段，也就是理性认识的阶段。认识的真正任务在于经过感觉而到达于思维，到达于逐步了解客观事物的内部矛盾，了解它的规律性，了解这一过程和那一过程间的内部联系，即到达于论理的认识。重复地说，论理的认识所以和感性的认识不同，是因为感性的认识是属于事物之片面的、现象的、外部联系的东西，论理的认识则推进了一大步，到达了事物的全体的、本质的、内部联系的东西，到达了暴露周围世界的内在的矛盾，因而能在周围世界的总体上，在周围世界一切方面的内部联系上去把握周围世界的发展。
+
+这种基于实践的由浅入深的辩证唯物论的关于认识发展过程的理论，在马克思主义以前，是没有一个人这样解决过的。马克思主义的唯物论，第一次正确地解决了这个问题，唯物地而且辩证地指出了认识的深化的运动，指出了社会的人在他们的生产和阶级斗争的复杂的、经常反复的实践中，由感性认识到论理认识的推移的运动。列宁说过：“物质的抽象，自然规律的抽象，价值的抽象以及其他等等，一句话，一切科学的（正确的、郑重的、非瞎说的）抽象，都更深刻、更正确、更完全地反映着自然。”[^1-2-15-3]马克思列宁主义认为：认识过程中两个阶段的特性，在低级阶段，认识表现为感性的，在高级阶段，认识表现为论理的，但任何阶段，都是统一的认识过程中的阶段。感性和理性二者的性质不同，但又不是互相分离的，它们在实践的基础上统一起来了。我们的实践证明：感觉到了的东西，我们不能立刻理解它，只有理解了的东西才更深刻地感觉它。感觉只解决现象问题，理论才解决本质问题。这些问题的解决，一点也不能离开实践。无论何人要认识什么事物，除了同那个事物接触，即生活于（实践于）那个事物的环境中，是没有法子解决的。不能在封建社会就预先认识资本主义社会的规律，因为资本主义还未出现，还无这种实践。马克思主义只能是资本主义社会的产物。马克思不能在自由资本主义时代就预先具体地认识帝国主义时代的某些特异的规律，因为帝国主义这个资本主义最后阶段还未到来，还无这种实践，只有列宁和斯大林才能担当此项任务。马克思、恩格斯、列宁、斯大林之所以能够作出他们的理论，除了他们的天才条件之外，主要地是他们亲自参加了当时的阶级斗争和科学实验的实践，没有这后一个条件，任何天才也是不能成功的。“秀才不出门，全知天下事”，在技术不发达的古代只是一句空话，在技术发达的现代虽然可以实现这句话，然而真正亲知的是天下实践着的人，那些人在他们的实践中间取得了“知”，经过文字和技术的传达而到达于“秀才”之手，秀才乃能间接地“知天下事”。如果要直接地认识某种或某些事物，便只有亲身参加于变革现实、变革某种或某些事物的实践的斗争中，才能触到那种或那些事物的现象，也只有在亲身参加变革现实的实践的斗争中，才能暴露那种或那些事物的本质而理解它们。这是任何人实际上走着的认识路程，不过有些人故意歪曲地说些反对的话罢了。世上最可笑的是那些“知识里手[^1-2-15-4]”，有了道听途说的一知半解，便自封为“天下第一”，适足见其不自量而已。知识的问题是一个科学问题，来不得半点的虚伪和骄傲，决定地需要的倒是其反面——诚实和谦逊的态度。你要有知识，你就得参加变革现实的实践。你要知道梨子的滋味，你就得变革梨子，亲口吃一吃。你要知道原子的组织同性质，你就得实行物理学和化学的实验，变革原子的情况。你要知道革命的理论和方法，你就得参加革命。一切真知都是从直接经验发源的。但人不能事事直接经验，事实上多数的知识都是间接经验的东西，这就是一切古代的和外域的知识。这些知识在古人在外人是直接经验的东西，如果在古人外人直接经验时是符合于列宁所说的条件“科学的抽象”，是科学地反映了客观的事物，那末这些知识是可靠的，否则就是不可靠的。所以，一个人的知识，不外直接经验的和间接经验的两部分。而且在我为间接经验者，在人则仍为直接经验。因此，就知识的总体说来，无论何种知识都是不能离开直接经验的。任何知识的来源，在于人的肉体感官对客观外界的感觉，否认了这个感觉，否认了直接经验，否认亲自参加变革现实的实践，他就不是唯物论者。“知识里手”之所以可笑，原因就是在这个地方。中国人有一句老话：“不入虎穴，焉得虎子。”这句话对于人们的实践是真理，对于认识论也是真理。离开实践的认识是不可能的。
+
+为了明了基于变革现实的实践而产生的辩证唯物论的认识运动——认识的逐渐深化的运动，下面再举出几个具体的例子。
+
+无产阶级对于资本主义社会的认识，在其实践的初期——破坏机器和自发斗争时期，他们还只在感性认识的阶段，只认识资本主义各个现象的片面及其外部的联系。这时，他们还是一个所谓“自在的阶级”。但是到了他们实践的第二个时期——有意识有组织的经济斗争和政治斗争的时期，由于实践，由于长期斗争的经验，经过马克思、恩格斯用科学的方法把这种种经验总结起来，产生了马克思主义的理论，用以教育无产阶级，这样就使无产阶级理解了资本主义社会的本质，理解了社会阶级的剥削关系，理解了无产阶级的历史任务，这时他们就变成了一个“自为的阶级”。
+
+中国人民对于帝国主义的认识也是这样。第一阶段是表面的感性的认识阶段，表现在太平天国运动和义和团运动等笼统的排外主义的斗争上[^1-2-15-5]。第二阶段才进到理性的认识阶段，看出了帝国主义内部和外部的各种矛盾，并看出了帝国主义联合中国买办阶级和封建阶级以压榨中国人民大众的实质，这种认识是从一九一九年五四运动[^1-2-15-6]前后才开始的。
+
+我们再来看战争。战争的领导者，如果他们是一些没有战争经验的人，对于一个具体的战争（例如我们过去十年的土地革命战争）的深刻的指导规律，在开始阶段是不了解的。他们在开始阶段只是身历了许多作战的经验，而且败仗是打得很多的。然而由于这些经验（胜仗，特别是败仗的经验），使他们能够理解贯串整个战争的内部的东西，即那个具体战争的规律性，懂得了战略和战术，因而能够有把握地去指导战争。此时，如果改换一个无经验的人去指导，又会要在吃了一些败仗之后（有了经验之后）才能理会战争的正确的规律。
+
+常常听到一些同志在不能勇敢接受工作任务时说出来的一句话：没有把握。为什么没有把握呢？因为他对于这项工作的内容和环境没有规律性的了解，或者他从来就没有接触过这类工作，或者接触得不多，因而无从谈到这类工作的规律性。及至把工作的情况和环境给以详细分析之后，他就觉得比较地有了把握，愿意去做这项工作。如果这个人在这项工作中经过了一个时期，他有了这项工作的经验了，而他又是一个肯虚心体察情况的人，不是一个主观地、片面地、表面地看问题的人，他就能够自己做出应该怎样进行工作的结论，他的工作勇气也就可以大大地提高了。只有那些主观地、片面地和表面地看问题的人，跑到一个地方，不问环境的情况，不看事情的全体（事情的历史和全部现状），也不触到事情的本质（事情的性质及此一事情和其他事情的内部联系），就自以为是地发号施令起来，这样的人是没有不跌交子的。
+
+由此看来，认识的过程，第一步，是开始接触外界事情，属于感觉的阶段。第二步，是综合感觉的材料加以整理和改造，属于概念、判断和推理的阶段。只有感觉的材料十分丰富（不是零碎不全）和合于实际（不是错觉），才能根据这样的材料造出正确的概念和论理来。
+
+这里有两个要点必须着重指明。第一个，在前面已经说过的，这里再重复说一说，就是理性认识依赖于感性认识的问题。如果以为理性认识可以不从感性认识得来，他就是一个唯心论者。哲学史上有所谓“唯理论”一派，就是只承认理性的实在性，不承认经验的实在性，以为只有理性靠得住，而感觉的经验是靠不住的，这一派的错误在于颠倒了事实。理性的东西所以靠得住，正是由于它来源于感性，否则理性的东西就成了无源之水，无本之木，而只是主观自生的靠不住的东西了。从认识过程的秩序说来，感觉经验是第一的东西，我们强调社会实践在认识过程中的意义，就在于只有社会实践才能使人的认识开始发生，开始从客观外界得到感觉经验。一个闭目塞听、同客观外界根本绝缘的人，是无所谓认识的。认识开始于经验——这就是认识论的唯物论。
+
+第二是认识有待于深化，认识的感性阶段有待于发展到理性阶段——这就是认识论的辩证法[^1-2-15-7]。如果以为认识可以停顿在低级的感性阶段，以为只有感性认识可靠，而理性认识是靠不住的，这便是重复了历史上的“经验论”的错误。这种理论的错误，在于不知道感觉材料固然是客观外界某些真实性的反映（我这里不来说经验只是所谓内省体验的那种唯心的经验论），但它们仅是片面的和表面的东西，这种反映是不完全的，是没有反映事物本质的。要完全地反映整个的事物，反映事物的本质，反映事物的内部规律性，就必须经过思考作用，将丰富的感觉材料加以去粗取精、去伪存真、由此及彼、由表及里的改造制作工夫，造成概念和理论的系统，就必须从感性认识跃进到理性认识。这种改造过的认识，不是更空虚了更不可靠了的认识，相反，只要是在认识过程中根据于实践基础而科学地改造过的东西，正如列宁所说乃是更深刻、更正确、更完全地反映客观事物的东西。庸俗的事务主义家不是这样，他们尊重经验而看轻理论，因而不能通观客观过程的全体，缺乏明确的方针，没有远大的前途，沾沾自喜于一得之功和一孔之见。这种人如果指导革命，就会引导革命走上碰壁的地步。
+
+理性认识依赖于感性认识，感性认识有待于发展到理性认识，这就是辩证唯物论的认识论。哲学上的“唯理论”和“经验论”都不懂得认识的历史性或辩证性，虽然各有片面的真理（对于唯物的唯理论和经验论而言，非指唯心的唯理论和经验论），但在认识论的全体上则都是错误的。由感性到理性之辩证唯物论的认识运动，对于一个小的认识过程（例如对于一个事物或一件工作的认识）是如此，对于一个大的认识过程（例如对于一个社会或一个革命的认识）也是如此。
+
+然而认识运动至此还没有完结。辩证唯物论的认识运动，如果只到理性认识为止，那末还只说到问题的一半。而且对于马克思主义的哲学说来，还只说到非十分重要的那一半。马克思主义的哲学认为十分重要的问题，不在于懂得了客观世界的规律性，因而能够解释世界，而在于拿了这种对于客观规律性的认识去能动地改造世界。在马克思主义看来，理论是重要的，它的重要性充分地表现在列宁说过的一句话：“没有革命的理论，就不会有革命的运动。”[^1-2-15-8]然而马克思主义看重理论，正是，也仅仅是，因为它能够指导行动。如果有了正确的理论，只是把它空谈一阵，束之高阁，并不实行，那末，这种理论再好也是没有意义的。认识从实践始，经过实践得到了理论的认识，还须再回到实践去。认识的能动作用，不但表现于从感性的认识到理性的认识之能动的飞跃，更重要的还须表现于从理性的认识到革命的实践这一个飞跃。抓着了世界的规律性的认识，必须把它再回到改造世界的实践中去，再用到生产的实践、革命的阶级斗争和民族斗争的实践以及科学实验的实践中去。这就是检验理论和发展理论的过程，是整个认识过程的继续。理论的东西之是否符合于客观真理性这个问题，在前面说的由感性到理性之认识运动中是没有完全解决的，也不能完全解决的。要完全地解决这个问题，只有把理性的认识再回到社会实践中去，应用理论于实践，看它是否能够达到预想的目的。许多自然科学理论之所以被称为真理，不但在于自然科学家们创立这些学说的时候，而且在于为尔后的科学实践所证实的时候。马克思列宁主义之所以被称为真理，也不但在于马克思、恩格斯、列宁、斯大林等179人科学地构成这些学说的时候，而且在于为尔后革命的阶级斗争和民族斗争的实践所证实的时候。辩证唯物论之所以为普遍真理，在于经过无论什么人的实践都不能逃出它的范围。人类认识的历史告诉我们，许多理论的真理性是不完全的，经过实践的检验而纠正了它们的不完全性。许多理论是错误的，经过实践的检验而纠正其错误。所谓实践是真理的标准，所谓“生活、实践底观点，应该是认识论底首先的和基本的观点”[^1-2-15-9]，理由就在这个地方。斯大林说得好：“理论若不和革命实践联系起来，就会变成无对象的理论，同样，实践若不以革命理论为指南，就会变成盲目的实践。”[^1-2-15-10]
+
+说到这里，认识运动就算完成了吗？我们的答复是完成了，又没有完成。社会的人们投身于变革在某一发展阶段内的某一客观过程的实践中（不论是关于变革某一自然过程的实践，或变革某一社会过程的实践），由于客观过程的反映和主观能动性的作用，使得人们的认识由感性的推移到了理性的，造成了大体上相应于该客观过程的法则性的思想、理论、计划或方案，然后再应用这种思想、理论、计划或方案于该同一客观过程的实践，如果能够实现预想的目的，即将预定的思想、理论、计划、方案在该同一过程的实践中变为事实，或者大体上变为事实，那末，对于这一具体过程的认识运动算是完成了。例如，在变革自然的过程中，某一工程计划的实现，某一科学假想的证实，某一器物的制成，某一农产的收获，在变革社会过程中某一罢工的胜利，某一战争的胜利，某一教育计划的实现，都算实现了预想的目的。然而一般地说来，不论在变革自然或变革社会的实践中，人们原定的思想、理论、计划、方案，毫无改变地实现出来的事，是很少的。这是因为从事变革现实的人们，常常受着许多的限制，不但常常受着科学条件和技术条件的限制，而且也受着客观过程的发展及其表现程度的限制（客观过程的方面及本质尚未充分暴露）。在这种情形之下，由于实践中发现前所未料的情况，因而部分地改变思想、理论、计划、方案的事是常有的，全部地改变的事也是有的。即是说，原定的思想、理论、计划、方案，部分地或全部地不合于实际，部分错了或全部错了的事，都是有的。许多时候须反复失败过多次，才能纠正错误的认识，才能到达于和客观过程的规律性相符合，因而才能够变主观的东西为客观的东西，即在实践中得到预想的结果。但是不管怎样，到了这种时候，人们对于在某一发展阶段内的某一客观过程的认识运动，算是完成了。
+
+然而对于过程的推移而言，人们的认识运动是没有完成的。任何过程，不论是属于自然界的和属于社会的，由于内部的矛盾和斗争，都是向前推移向前发展的，人们的认识运动也应跟着推移和发展。依社会运动来说，真正的革命的指导者，不但在于当自己的思想、理论、计划、方案有错误时须得善于改正，如同上面已经说到的，而且在于当某一客观过程已经从某一发展阶段向另一发展阶段推移转变的时候，须得善于使自己和参加革命的一切人员在主观认识上也跟着推移转变，即是要使新的革命任务和新的工作方案的提出，适合于新的情况的变化。革命时期情况的变化是很急速的，如果革命党人的认识不能随之而急速变化，就不能引导革命走向胜利。
+
+然而思想落后于实际的事是常有的，这是因为人的认识受了许多社会条件的限制的缘故。我们反对革命队伍中的顽固派，他们的思想不能随变化了的客观情况而前进，在历史上表现为右倾机会主义。这些人看不出矛盾的斗争已将客观过程推向前进了，而他们的认识仍然停止在旧阶段。一切顽固党的思想都有这样的特征。他们的思想离开了社会的实践，他们不能站在社会车轮的前头充任向导的工作，他们只知跟在车子后面怨恨车子走得太快了，企图把它向后拉，开倒车。
+
+我们也反对“左”翼空谈主义。他们的思想超过客观过程的一定发展阶段，有些把幻想看作真理，有些则把仅在将来有现实可能性的理想，勉强地放在现时来做，离开了当前大多数人的实践，离开了当前的现实性，在行动上表现为冒险主义。
+
+唯心论和机械唯物论，机会主义和冒险主义，都是以主观和客观相分裂，以认识和实践相脱离为特征的。以科学的社会实践为特征的马克思列宁主义的认识论，不能不坚决反对这些错误思想。马克思主义者承认，在绝对的总的宇宙发展过程中，各个具体过程的发展都是相对的，因而在绝对真理的长河中，人们对于在各个一定发展阶段上的具体过程的认识只具有相对的真理性。无数相对的真理之总和，就是绝对的真理[^1-2-15-11]。客观过程的发展是充满着矛盾和斗争的发展，人的认识运动的发展也是充满着矛盾和斗争的发展。一切客观世界的辩证法的运动，都或先或后地能够反映到人的认识中来。社会实践中的发生、发展和消灭的过程是无穷的，人的认识的发生、发展和消灭的过程也是无穷的。根据于一定的思想、理论、计划、方案以从事于变革客观现实的实践，一次又一次地向前，人们对于客观现实的认识也就一次又一次地深化。客观现实世界的变化运动永远没有完结，人们在实践中对于真理的认识也就永远没有完结。马克思列宁主义并没有结束真理，而是在实践中不断地开辟认识真理的道路。我们的结论是主观和客观、理论和实践、知和行的具体的历史的统一，反对一切离开具体历史的“左”的或右的错误思想。
+
+社会的发展到了今天的时代，正确地认识世界和改造世界的责任，已经历史地落在无产阶级及其政党的肩上。这种根据科学认识而定下来的改造世界的实践过程，在世界、在中国均已到达了一个历史的时节——自有历史以来未曾有过的重大时节，这就是整个儿地推翻世界和中国的黑暗面，把它们转变过来成为前所未有的光明世界。无产阶级和革命人民改造世界的斗争，包括实现下述的任务：改造客观世界，也改造自己的主观世界——改造自己的认识能力，改造主观世界同客观世界的关系。地球上已经有一部分实行了这种改造，这就是苏联。他们还正在促进这种改造过程。中国人民和世界人民也都正在或将要通过这样的改造过程。所谓被改造的客观世界，其中包括了一切反对改造的人们，他们的被改造，须要通过强迫的阶段，然后才能进入自觉的阶段。世界到了全人类都自觉地改造自己和改造世界的时候，那就是世界的共产主义时代。
+
+通过实践而发现真理，又通过实践而证实真理和发展真理。从感性认识而能动地发展到理性认识，又从理性认识而能动地指导革命实践，改造主观世界和客观世界。实践、认识、再实践、再认识，这种形式，循环往复以至无穷，而实践和认识之每一循环的内容，都比较地进到了高一级的程度。这就是辩证唯物论的全部认识论，这就是辩证唯物论的知行统一观。
+
+##### 注释
+
+[^1-2-15-*]: 在中国共产党内，曾经有一部分教条主义的同志长期拒绝中国革命的经验，否认“马克思主义不是教条而是行动的指南”这个真理，而只生吞活剥马克思主义书籍中的只言片语，去吓唬人们。还有另一部分经验主义的同志长期拘守于自身的片断经验，不了解理论对于革命实践的重要性，看不见革命的全局，虽然也是辛苦地——但却是盲目地在工作。这两类同志的错误思想，特别是教条主义思想，曾经在一九三一年至一九三四年使得中国革命受了极大的损失，而教条主义者却是披着马克思主义的外衣迷惑了广大的同志。毛泽东的《实践论》，是为着用马克思主义的认识论观点去揭露党内的教条主义和经验主义——特别是教条主义这些主观主义的错误而写的。因为重点是揭露看轻实践的教条主义这种主观主义，故题为《实践论》。毛泽东曾以这篇论文的观点在延安的抗日军事政治大学作过讲演。
+[^1-2-15-1]: 见列宁《黑格尔〈逻辑学〉一书摘要》。新的译文是：“实践高于（理论的）认识，因为它不仅具有普遍性的品格，而且还具有直接现实性的品格。”（《列宁全集》第55卷，人民出版社1990年版，第183页）
+[^1-2-15-2]: 参见马克思《关于费尔巴哈的提纲》（《马克思恩格斯选集》第1卷，人民出版社1972年版，第16—19页）和列宁《唯物主义和经验批判主义》第二章第六节（《列宁全集》第18卷，人民出版社1988年版，第144页）。
+[^1-2-15-3]: 见列宁《黑格尔〈逻辑学〉一书摘要》（《列宁全集》第55卷，人民出版社1990年版，第142页）。
+[^1-2-15-4]: 里手，湖南方言，内行的意思。
+[^1-2-15-5]: 一九五一年三月二十七日，毛泽东在致李达的信中说：“《实践论》中将太平天国放在排外主义一起说不妥，出选集时拟加修改，此处暂仍照原。”
+[^1-2-15-6]: 五四运动是一九一九年五月四日发生的反帝反封建的爱国运动。当时，第一次世界大战刚刚结束，英、美、法、日、意等战胜国在巴黎召开对德和会，决定由日本继承德国在中国山东的特权。中国是参加对德宣战的战胜国之一，但北洋军阀政府却准备接受这个决定。五月四日，北京学生游行示威，反对帝国主义的这一无理决定和北洋军阀政府的妥协。这次运动迅速地获得了全国人民的响应，到六月三日以后，发展成为有工人阶级、城市小资产阶级和民族资产阶级参加的广大群众性的反帝反封建的爱国运动。五四运动也是反对封建文化的新文化运动。以一九一五年《青年杂志》（后改名《新青年》）创刊为起点的新文化运动，竖起“民主”和“科学”的旗帜，反对旧道德，提倡新道德，反对旧文学，提倡新文学。五四运动中的先进分子接受了马克思主义，使新文化运动发展成为马克思主义思想运动，他们致力于马克思主义同中国工人运动相结合，在思想上和干部上准备了中国共产党的成立。
+[^1-2-15-7]: 参见列宁《黑格尔〈逻辑学〉一书摘要》：“要理解，就必须从经验开始理解、研究，从经验上升到一般。”（《列宁全集》第55卷，人民出版社1990年版，第175页）
+[^1-2-15-8]: 见列宁《俄国社会民主党人的任务》（《列宁全集》第2卷，人民出版社1984年版，第443页）；并见列宁《怎么办？》第一章第四节（《列宁全集》第6卷，人民出版社1986年版，第23页）。
+[^1-2-15-9]: 见列宁《唯物主义和经验批判主义》第二章第六节（《列宁全集》第18卷，人民出版社1988年版，第144页）。
+[^1-2-15-10]: 见斯大林《论列宁主义基础》第三部分《理论》。新的译文是：“离开革命实践的理论是空洞的理论，而不以革命理论为指南的实践是盲目的实践。”（《斯大林选集》上卷，人民出版社1979年版，第199—200页）
+[^1-2-15-11]: 参见列宁《唯物主义和经验批判主义》第二章第五节。原文是：“人类思维按其本性是能够给我们提供并且正在提供由相对真理的总和所构成的绝对真理的。”（《列宁全集》第18卷，人民出版社1988年版，第135页）
