--- a/毛泽东选集-读书笔记(索引).md
+++ b/毛泽东选集-读书笔记(索引).md
@@ -2,15 +2,15 @@
 
 # 毛泽东选集(1-7卷静火版)
 
+## 第二版出版说明
+
+[第二版出版说明](毛泽东选集-读书笔记/第二版出版说明.md)
+
+## 本书出版的说明
+
+[本书出版的说明](毛泽东选集-读书笔记/本书出版的说明.md)
+
 ## 第一卷
-
-### 第二版出版说明
-
-[第二版出版说明](毛泽东选集-读书笔记/第一卷/第二版出版说明.md)
-
-### 本书出版的说明
-
-[本书出版的说明](毛泽东选集-读书笔记/第一卷/本书出版的说明.md)
 
 ### 第一次国内革命战争时期(1924.1-1927.7)
 
@@ -83,3 +83,16 @@
 #### 实践论(1937.7)
 
 [实践论](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/实践论.md)
+
+#### 矛盾论(1937.8)
+
+[矛盾论](毛泽东选集-读书笔记/第一卷/第二次国内革命战争时期/矛盾论.md)
+
+## 第二卷
+
+### 抗日战争时期（上）(1937-1941)
+
+## 第三卷
+
+### 抗日战争时期（下）(1937-1945)
+
