--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -10,6 +10,26 @@
 
 [本书出版的说明](毛泽东选集(1-7卷静火版)/本书出版的说明.md)
 
+## 第五卷出版说明
+
+[第五卷出版说明](毛泽东选集(1-7卷静火版)/第五卷出版说明.md)
+
+## 第六卷出版说明
+
+[第六卷出版说明](毛泽东选集(1-7卷静火版)/第六卷出版说明.md)
+
+## 第六卷静火有言
+
+[第六卷静火有言](毛泽东选集(1-7卷静火版)/第六卷静火有言.md)
+
+## 第七卷出版说明
+
+[第七卷出版说明](毛泽东选集(1-7卷静火版)/第七卷出版说明.md)
+
+## 第七卷静火有言
+
+[第七卷静火有言](毛泽东选集(1-7卷静火版)/第七卷静火有言.md)
+
 ## 第一卷
 
 ### 第一次国内革命战争时期(1924.1-1927.7)
