--- a/毛泽东选集(1-7卷静火版)(索引).md
+++ b/毛泽东选集(1-7卷静火版)(索引).md
@@ -112,6 +112,10 @@
 
 ### 抗日战争时期（上）(1937-1941)
 
+#### 反对日本进攻的方针、办法和前途(1937.7.23)
+
+[反对日本进攻的方针、办法和前途](毛泽东选集(1-7卷静火版)/第二卷/抗日战争时期（上）/反对日本进攻的方针、办法和前途.md)
+
 ## 第三卷
 
 ### 抗日战争时期（下）(1937-1945)
